# facto

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  run_tests.py  test_pypi_install.py
.githooks/: pre-push
examples/: multi_provider_demo.py
examples/langchain/: README.md  basic_usage.py  evidence.json
infrastructure/nats/: nats-server.conf
infrastructure/prometheus/: prometheus.yml
infrastructure/scylla/: schema.cql
scripts/: install_hooks.sh  publish_sdk.sh  start.sh  stop.sh  test.sh  test_facto_cycle.py  verify_api.py
sdk/python/: pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/src/facto_sdk/: __init__.py  cli.py
sdk/python/tests/: test_cli.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: basic-usage.ts
sdk/typescript/src/: client.ts  crypto.ts  index.ts  models.ts
sdk/typescript/tests/: client.test.ts
server/api/: go.mod  go.sum  handlers.go  main.go  storage.go
server/ingestion/: Cargo.toml
server/ingestion/src/: main.rs
server/processor/: consumer.go  go.mod  go.sum  main.go  merkle.go  storage.go
tests/: real_agents.py
tests/integration/: test_cross_component.py  test_e2e.py  test_lifecycle.py
tests/load/: load_test.py
tests/security/: test_tamper_resistance.py
