[package]
name = "facto-ingestion"
version = "0.1.0"
edition = "2021"
description = "High-performance ingestion service for Facto forensic accountability system"
authors = ["Facto Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha3 = "0.10"
base64 = "0.21"
hex = "0.4"
async-nats = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
uuid = { version = "1.6", features = ["v4", "v7", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.5"
governor = "0.6"
nonzero_ext = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
